--- a/ChatBotApp/gradle/wrapper/gradle-wrapper.properties
+++ b/ChatBotApp/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Jan 09 12:35:13 GMT 2025
+#Thu Jan 09 13:01:54 UTC 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-bin.zip
