--- a/ChatBotApp/app/src/main/AndroidManifest.xml
+++ b/ChatBotApp/app/src/main/AndroidManifest.xml
@@ -10,7 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ChatBotApp"
-        tools:targetApi="31" />
+        tools:targetApi="31"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".MainActivity"
+            android:exported="true"
+            android:label="AI Chatbot">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER"></category>
+            </intent-filter>
+        </activity>
+        <activity android:name=".AppActivity"></activity>
+    </application>
 
 </manifest>
