End chat button fix!

--- a/ChatBotApp/app/src/main/AndroidManifest.xml
+++ b/ChatBotApp/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         tools:targetApi="31"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
             android:exported="true"
             android:label="AI Chatbot">
