--- a/ChatBotApp/app/src/main/AndroidManifest.xml
+++ b/ChatBotApp/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
             android:exported="true"
-            android:label="AI Chatbot">
+            android:label="MannyConnect">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
